Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-83984

Memory leak in QtDesigner: widgetdatabase.cpp, scaleFormTemplate

XMLWordPrintable

    • c260c31a441ebae149fccad6d0a9dde68c57b4eb (qt/qttools/dev) 6e65714cac98c2d355c06c10d355e82cfb07aa4b (qt/qttools/5.15)

      The domUI object is deleted at the end of the function. If the call to elementWidget fails, then the function returns prematurely without deleting the domUI object.

      Should delete explicitly, or use QScopedPointer.

      This is reported by coverity at https://scan3.coverity.com/reports.htm#v42553/p10113/fileInstanceId=33001381&defectInstanceId=9019821&mergedDefectId=21962

        For Gerrit Dashboard: QTBUG-83984
        # Subject Branch Project Status CR V

            vhilshei Volker Hilsheimer
            vhilshei Volker Hilsheimer
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes