Plug memory leak when returning prematurely

Use QScopedPointer, like elsewhere in the code.

Fixes: QTBUG-83984
Change-Id: I6006b4c7f5ba6dfd0f4eccea2b6e9227cbf3a02c
Coverity-Id: 21962
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>
(cherry picked from commit c260c31a441ebae149fccad6d0a9dde68c57b4eb)
Reviewed-by: Cherry-pick Bot